# pyinaturalist-convert

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  HISTORY.md  README.md  alembic.ini  conversion_examples.py  noxfile.py  pyproject.toml  setup.cfg  t1.csv  x.parquet
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260211_1085cbe39943_initial_schema.py  20260212_2a7c75a1e50d_observation_updates.py  20260213_39ef3f0bbdcc_taxon_updates.py  20260214_486206627704_photo_updates.py  20260216_03d045d1db94_initial_schema.py  20260306_c7d8a2f88e3f_observation_fts.py  20260307_5d8e1f2a7b6c_taxon_fts.py
docs/: conf.py  index.md  reference.md
docs/modules/: converters.rst  csv.rst  db.rst  download.rst  dwc.rst  dwca.rst  fts.rst  geojson.rst  gpx.rst  odp.rst  sqlite.rst  taxonomy.rst
pyinat/: __init__.py
pyinaturalist_convert/: __init__.py  _models.py  bulk_csv.py  constants.py  converters.py  csv.py  db.py  download.py  dwc.py  dwca.py  fts.py  geojson.py  gpx.py  mp.py  odp.py  places.py  progress.py  sqlite.py  taxonomy.py
pyinaturalist_export/: converters.py
test/: benchmark_taxonomy.py  conftest.py  export_sample_taxonomy.py  synthetic_taxonomy.py  test_converters.py  test_db.py  test_download.py  test_dwc.py  test_dwca.py  test_fts.py  test_geojson.py  test_gpx.py  test_odp.py  test_taxonomy.py  test_taxonomy_aggregation.py
test/sample_data/: get_places_by_id.json  get_taxa_by_id.json  my_observations.csv  my_observations.hdf  my_observations.json  my_observations.parquet  obs_45524803.dwc  observation.json  observation_nogeojson.json  observations.csv  observations.dwc  observations.feather  observations.hdf  observations.json  observations.parquet  observations_dwca.csv  observations_export.csv  observations_without_coords.json  taxon_aggregates.csv  taxon_common_names.csv  taxon_counts.csv  taxon_counts_fts.parquet  taxonomy.csv  test_captive.dwc
test/sample_data/inaturalist-open-data/: observations.csv  observers.csv  photos.csv  taxa.csv
test/sample_data/inaturalist-taxonomy.dwca/: VernacularNames-english.csv  taxa.csv
