[project]
name = 'pyinaturalist-convert'
version = '0.8.0'
description = 'Data conversion tools for iNaturalist observations and taxonomy'
authors = [
    { name = "Jordan Cook" }
]
readme = 'README.md'
requires-python = '>=3.10'
keywords = [
    'inaturalist',
    'biodiversity',
    'export',
    'convert',
    'csv',
    'darwin-core',
    'dataframe',
    'gpx',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Typing :: Typed',
]

dependencies = [
    'pyinaturalist>=0.21',
    'flatten-dict>=0.4',
    'requests-ratelimiter>=0.6,<0.9',
    'tablib>=3.0',
]

[project.urls]
homepage      = 'https://github.com/pyinat/pyinaturalist-convert'
repository    = 'https://github.com/pyinat/pyinaturalist-convert'
documentation = 'https://pyinaturalist-convert.readthedocs.io'


# Optional dependencies for specific data formats
[project.optional-dependencies]
aggregate   = ['polars>=1.30', 'sqlalchemy>=2.0']
db          = ['sqlalchemy>=2.0', 'alembic>=1.13']
dwc         = ['xmltodict>=0.12']
feather     = ['pandas>=1.2', 'pyarrow>=10.0']
geojson     = ['geojson>=2.5']
gpx         = ['gpxpy>=1.4']
hdf         = ['pandas>=1.2', 'tables>=3.6']
html        = ['jinja2>=3.0', 'markuppy>=1.12']
odp         = ['boto3>=1.20']
parquet     = ['pandas>=1.2', 'pyarrow>=10.0']
xlsx        = ['pandas>=1.2', 'openpyxl>=2.6']

[dependency-groups]
# Dev dependencies
dev = [
    'coverage~=7.0',
    'ipython>=8.0',
    'nox~=2025.05',
    'prek>=0.3',
    'pyparsing~=3.0',
    'pytest~=8.0',
    'pytest-cov>=5.0',
    'pytest-xdist>=2.2',
    'sphinx-autobuild>=2024.10',
    'sqlalchemy2-stubs>=0.0.2a38',
]

# Documentation dependencies for Readthedocs builds
docs = [
    'furo~=2025.12; python_version>="3.12"',
    'myst-parser>=5.0; python_version>="3.12"',
    'sphinx~=8.2; python_version>="3.12"',
    'sphinx-autodoc-typehints>=2.0; python_version>="3.12"',
    'sphinx-copybutton>=0.5; python_version>="3.12"',
    'sphinx-design>=0.5; python_version>="3.12"',
]

[build-system]
requires = ['hatchling>=1.0.0']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.sdist]
include = ['pyinaturalist_convert', 'alembic', 'README.md']

[tool.hatch.build.targets.wheel]
packages = ['pyinaturalist_convert']

[tool.hatch.build.targets.wheel.force-include]
'README.md' = 'pyinaturalist_convert/README.md'
'alembic/env.py' = 'pyinaturalist_convert/alembic/env.py'
'alembic/versions' = 'pyinaturalist_convert/alembic/versions'

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.run]
branch = true
source = ['pyinaturalist_convert']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'if TYPE_CHECKING:', 'except ImportError:']

[tool.mypy]
ignore_missing_imports = true
files = ['pyinaturalist_convert']

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py310'
exclude = ['examples/']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['B', 'C4', 'E', 'F', 'I']
ignore = ['B023', 'E731']

[tool.ruff.lint.isort]
known-first-party = ['test']

# Wrap lines to 100 chars, but don't error on unwrappable lines until 120 chars
[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.typos]
files.extend-exclude = [
    'test/sample_data',
]
